<resources>
    <string name="app_name">Universal App</string>
    <string name="buttonTipDescription">Tip Calculator</string>
    <string name="buttonUnitDescription">Unit Conversion</string>
    <string name="buttonMoneyDescription">Money Exchange</string>
    <string name="action_settings">Settings</string>
    <string name="buttonConvertText">Convert</string>
    <string name="textResult">Result:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>

    <!-- Tip Calculator Fragment Strings -->
    <string name="bill_amount_text">Bill Amount</string>
    <string name="percent_text">Percent</string>
    <string name="tip_text">Tip</string>
    <string name="total_text">Total</string>
    <string name="split_bill_text">Split Bill?</string>
    <string name="per_person_text">Per Person</string>
    <string name="default_money">$0.00</string>
    <string name="default_percent">15</string>
    <string name="percent_sign">%</string>

    <!-- Unit Conversion Fragment Strings -->
    <string name="unit_conv_from">From:</string>
    <string name="unit_con_to">To:</string>
    <string name="centimeters">centimeters</string>
    <string name="meters">meters</string>
    <string name="feet">feet</string>
    <string name="miles">miles</string>
    <string name="kilometers">kilometers</string>
    <string name="dollarSign">$</string>

    <!-- Error Messages -->
    <string name="empty_amount_error">You must enter an amount.</string>
    <string name="error_radio_button">You must choose an option.</string>
</resources>
