<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollarSign"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:id="@+id/editTextMoneyExchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="48dp"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerMoneyFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerMoneyOptions"
        android:layout_marginTop="16dp" >
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerMoneyTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerMoneyOptions"
        android:layout_marginTop="16dp" >
    </Spinner>

    <Button
        android:id="@+id/buttonConvertMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonConvertText"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textResult"
            android:layout_marginRight="16dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollarSign"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/textViewResultMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text=""
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>